[gd_scene load_steps=5 format=3 uid="uid://d2hedx76cs7qs"]

[ext_resource type="Script" path="res://SCRIPTS/screen_manager.gd" id="1_67ds3"]
[ext_resource type="PackedScene" uid="uid://ss8rdvj5xugi" path="res://SCENES/playground.tscn" id="1_cedun"]
[ext_resource type="Texture2D" uid="uid://djt23u25xtlg1" path="res://ASSETS/TitleCard.png" id="3_35yln"]
[ext_resource type="AudioStream" uid="uid://cm18ykhwm5hwn" path="res://ASSETS/Sounds/saloon.ogg" id="4_rwlf6"]

[node name="ScreenManager" type="Node" node_paths=PackedStringArray("playground")]
script = ExtResource("1_67ds3")
playground_scene = ExtResource("1_cedun")
playground = NodePath("GameScreen/Playground")

[node name="GameScreen" type="Node" parent="."]

[node name="Playground" parent="GameScreen" instance=ExtResource("1_cedun")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_35yln")

[node name="PlayButton" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -40.0
offset_right = 50.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Play
"

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_rwlf6")
volume_db = -10.0
autoplay = true

[connection signal="reset_pressed" from="GameScreen/Playground" to="." method="_on_playground_reset_pressed"]
[connection signal="pressed" from="CanvasLayer/PlayButton" to="." method="_on_play_button_pressed"]
